--- a/LaTeX/TeleCom/TI0065/assignment_1.tex
+++ b/LaTeX/TeleCom/TI0065/assignment_1.tex
@@ -131,13 +131,13 @@ $ \left\{\begin{array}{l}
                 transcendental. Sendo necessário o uso de técnicas
                 numéricas para encontrar suas raízes. Usando a função
                 solve de um {\bfseries{CAS}}(\emph{Computer Algebra
-                  System}), $\theta_{h} \approx 0.3049\si{\radian}$ ou
-                $\approx$ $17.4711\si{\degree}$. A função $U(\theta)$
+                  System}), $\theta_{h} \approx 0,3049\si{\radian}$ ou
+                $\approx$ $17,4711\si{\degree}$. A função $U(\theta)$
                 é simétrica em relação ao máximo em $\theta = 0$,
                 assim
                 $ \mathrm{LFMP} \, = 2\theta_{h} \approx
-                0.6098\si{\radian} \Rightarrow \theta_{n} \approx
-                34.94\si{\degree}$.
+                0,6098\si{\radian} \Rightarrow \theta_{n} \approx
+                34,94\si{\degree}$.
     
               \item LFEN. Seja $U(\theta_{n}) = 0$ $\Rightarrow$
                 \fbox{$\cos{2\theta_{n}}\cos{3\theta_{n}} = 0$}. Isto
@@ -162,7 +162,7 @@ $ \left\{\begin{array}{l}
                      \end{enumerate}
 
 
-\newpage
+                     \newpage
                      
 \section{Questão 2.7}
 A potência radiada por uma antena sem perda é $14\si{\watt}$. As
@@ -282,9 +282,129 @@ $ \left\{\begin{array}{l|l}
 
                      \end{enumerate}
 
-                   \item 
+                   \item O ângulo sólido de feixe $\Omega_{A}$ exato e
+                     aproximado.
+
+                     \begin{enumerate}[i.]
+                     \item Seja $\Omega_{A}$ $=$
+                       $\displaystyle \int^{2\pi}_{0}\int^{\pi}_{0}$
+                       $U_{n} \, d\Omega_{A}$, com
+                       $U_{n} =
+                       \dfrac{U(\theta,\phi)}{\left|U(\theta,\phi)_{M}\right|}$
+                       $\Rightarrow$
+                       $U_{n} = \dfrac{\frac{21}{\pi}}{\frac{21}{\pi}}
+                       \cos^{2}{\theta}$ e
+                       $d\Omega_{A} = \sin{\theta} \, d\theta \,
+                       d\phi$, assim temos:
+
+                       \begin{eqnarray*}
+                         \Omega_{A} & = &
+                                          \int^{2\pi}_{0}\int^{\pi}_{0}
+                                          \cos^{2}{\theta}\sin{\theta}
+                                          \, d\theta \, d\phi \\
+                                    & = & 2\pi \int^{\pi}_{0}
+                                          \cos^{2}{\theta}\sin{\theta}
+                                          \, d\theta
+                       \end{eqnarray*}
+
+                       Fazendo a seguinte substituição de variável
+
+
+                       $ \left\{\begin{array}{l}
+                                  u = \cos{\theta} \\
+                                  -du = \sin{\theta} d\theta
+                                \end{array}\right.
+                              $
+
+                              e dos limites, temos
+
+                      \begin{eqnarray*}
+                        \Omega_{A} & = & (-2\pi) \int^{-1}_{1}u^{2} \, du \\
+                                   & = & 2\pi \, \left(\dfrac{u^{3}}{3}\right)^{1}_{-1} \\
+                        \Omega_{A} & = & \dfrac{4\pi}{3} \si{\steradian}
+                      \end{eqnarray*}
+
+                    \item Com o cálculo análogo ao item anterior temos
+                      $U_{n} = \dfrac{\frac{28}{\pi}}{\frac{28}{\pi}}
+                      \cos^{3}{\theta}$ e
+                      $d\Omega_{A} = \sin{\theta} \, d\theta \,
+                      d\phi$, assim temos:
+
+                       \begin{eqnarray*}
+                         \Omega_{A} & = &
+                                          \int^{2\pi}_{0}\int^{\pi}_{0}
+                                          \cos^{3}{\theta}\sin{\theta}
+                                          \, d\theta \, d\phi \\
+                                    & = & 2\pi \int^{\pi}_{0}
+                                          \cos^{3}{\theta}\sin{\theta}
+                                          \, d\theta
+                       \end{eqnarray*}
+
+                       Fazendo a seguinte substituição de variável
+
+
+                       $ \left\{\begin{array}{l}
+                                  u = \cos{\theta} \\
+                                  -du = \sin{\theta} d\theta
+                                \end{array}\right.
+                              $
+
+                              e dos limites, temos
+
+                      \begin{eqnarray*}
+                        \Omega_{A} & = & (-2\pi) \int^{-1}_{1}u^{3} \, du \\
+                                   & = & 2\pi \, \left(\dfrac{u^{4}}{4}\right)^{1}_{-1} \\
+                        \Omega_{A} & = & 0 \si{\steradian}
+                      \end{eqnarray*}
+
+                    \item A área aproximada é dado em termos dos
+                      ângulos entre os pontos de LFMP do lóbulo
+                      principal nos dois principais planos
+                      $(\theta,\phi)$. Assim temos:
+                      
+                      \begin{enumerate}[1.]
+                      \item
+                        $U(\theta) = \dfrac{21}{\pi}\cos^{2}{\theta}$
+                        $\Rightarrow$
+                        $\dfrac{21}{\pi}\cos^{2}{\theta_{h}}$ $=$
+                        $\dfrac{1}{2}$ $\Rightarrow$
+                        $\cos{\theta_{h}}$ $=$
+                        $\sqrt{\dfrac{\pi}{42}}$ $\Rightarrow$
+                        $\theta_{h} =
+                        \cos^{-1}{\sqrt{\dfrac{\pi}{42}}}$
+                        $\Rightarrow$
+                        $\theta_{h} \approx 1,293 \si{\radian}$
+                        . Assim a LFMP na direção de $\theta$ é dado
+                        por $2\theta_{h} \approx 2,587 \si{\radian}$.
+                        Por simetria, já que o padrão de feixe
+                        independe de $\phi$,
+                        $\Theta_{1r} = \Theta_{2r}$. Assim podemos
+                        calcular
+                        $\Omega_{A} \approx \Theta_{1} \Theta_{2}$
+                        $\approx$ $2,587^{2}$ $\approx$
+                        $6,695 \si{\steradian}$
+                      \item
+                        $U(\theta) = \dfrac{28}{\pi}\cos^{3}{\theta}$
+                        $\Rightarrow$
+                        $\dfrac{28}{\pi}\cos^{3}{\theta_{h}}$ $=$
+                        $\dfrac{1}{2}$ $\Rightarrow$
+                        $\cos{\theta_{h}}$ $=$
+                        $\sqrt[3]{\dfrac{\pi}{56}}$ $\Rightarrow$
+                        $\theta_{h} =
+                        \cos^{-1}{\sqrt[3]{\dfrac{\pi}{56}}}$
+                        $\Rightarrow$
+                        $\theta_{h} \approx 1,177 \si{\radian}$.
+                        Assim a LFMP na direção de $\theta$ é dado por
+                        $2\theta_{h} \approx 2,355 \si{\radian}$. Assim podemos
+                        calcular
+                        $\Omega_{A} \approx \Theta_{1} \Theta_{2}$
+                        $\approx$ $2,355^{2}$ $\approx$
+                        $5,55 \si{\steradian}$
+                      \end{enumerate}
+
+                    \end{enumerate}
                      
-                   \end{enumerate}
+                  \end{enumerate}
        
        
 \section{Questão 2.8}
