--- a/LaTeX/TeleCom/TI0065/assignment_1.tex
+++ b/LaTeX/TeleCom/TI0065/assignment_1.tex
@@ -162,7 +162,7 @@ $ \left\{\begin{array}{l}
                      \end{enumerate}
 
 
-                     \newpage
+                     % \newpage
                      
 \section{Questão 2.7}
 A potência radiada por uma antena sem perda é $14\si{\watt}$. As
@@ -395,15 +395,74 @@ $ \left\{\begin{array}{l|l}
                         $\Rightarrow$
                         $\theta_{h} \approx 1,177 \si{\radian}$.
                         Assim a LFMP na direção de $\theta$ é dado por
-                        $2\theta_{h} \approx 2,355 \si{\radian}$. Assim podemos
-                        calcular
+                        $2\theta_{h} \approx 2,355
+                        \si{\radian}$. Assim podemos calcular
                         $\Omega_{A} \approx \Theta_{1} \Theta_{2}$
                         $\approx$ $2,355^{2}$ $\approx$
                         $5,55 \si{\steradian}$
                       \end{enumerate}
+                    \end{enumerate}
+                    
+                  \item A diretividade é dada por $D_{0}$ $=$
+                    $\dfrac{4\pi}{P_{rad}}$ $U_{M}$ ou $D_{0}$ $=$
+                    $\dfrac{4\pi}{\Omega_{A}}$
+                    $ \approx \dfrac{4\pi}{\Theta_{1}\Theta_{2}}$,
+                    exata e aproximada respectivamente.
+
+                    \begin{enumerate}[i.]
+                    \item Para $U(\theta)$ $=$ $\dfrac{21}{\pi}$
+                      $\cos^{2}{\theta}$, temos:
+
+                      \begin{enumerate}[1.]
+                      \item $D_{0}$ $=$ $\dfrac{4\pi}{14}$
+                        $\dfrac{21}{\pi}$ $=$ $6$ ou $10\log^{6}_{10}$
+                        $=$ $7,781\si{\decibel}$
+                      \item $D_{0}$ $\approx$
+                        $\dfrac{4\pi}{2,587^{2}}$ $\Rightarrow$
+                        $D_{0}$ $=$ $1,587$ ou $10\log^{1,587}_{10}$
+                        $=$ $2,005\si{\decibel}$
+                      \end{enumerate}
+
+                    \item Para $U(\theta)$ $=$ $\dfrac{28}{\pi}$
+                      $\cos^{3}{\theta}$, temos:
+
+                      \begin{enumerate}[1.]
+                      \item $D_{0}$ $=$ $\dfrac{4\pi}{14}$
+                        $\dfrac{28}{\pi}$ $=$ $8$ ou $10\log^{8}_{10}$
+                        $=$ $9,030\si{\decibel}$
+                      \item $D_{0}$ $\approx$
+                        $\dfrac{4\pi}{2,355^{2}}$ $\Rightarrow$
+                        $D_{0}$ $=$ $2,265$ ou $10\log^{2,265}_{10}$
+                        $=$ $\si{3,55\decibel}$
+                      \end{enumerate}
+                      
+                    \end{enumerate}
+
+                  \item Para uma antena sem perdas o ganho é igual a
+                    diretividade, assim $G = D_{0}$.
+
+                    \begin{enumerate}[i]
+                    \item Para $D_{0}$ $=$ $6$ e
+                      $D_{0} \approx 7,781$, temos:
+                      \begin{enumerate}[1.]
+                      \item $G = 6$ ou $10\log^{6}_{10}$ $=$
+                        $7,781\si{\decibel}$
+                      \item $G \approx$ $1,587$ ou
+                        $10\log^{1,587}_{10}$ $=$ $2,005\si{\decibel}$
+                      \end{enumerate}
+                      
+                    \item Para $D_{0}$ $=$ $8$ e
+                      $D_{0} \approx 2,265$, temos:
+
+                      \begin{enumerate}
+                      \item $G = 8$ ou $10\log^{8}_{10}$ $=$
+                        $9,030\si{\decibel}$
+                      \item $G \approx$ $2,265$ ou
+                        $10\log^{2,265}_{10}$ $=$ $3,55\si{\decibel}$
+                      \end{enumerate}
 
                     \end{enumerate}
-                     
+
                   \end{enumerate}
        
        
@@ -442,6 +501,20 @@ segundo fórmula de Kraus (adimensional e em dB).
 segundo fórmula de Tai \& Pereira (adimensional e em dB).
 \\
 \textbf{Resposta:}
+
+\begin{enumerate}[(a)]
+\item Como $LFMP = 2\theta_{h}$,temos que $LFMP = 10\si{\degree}$
+  $\Rightarrow$ $\theta_{h} = 5\si{\degree}$. Seja
+  $U(\theta) = \dfrac{1}{2}$, assim temos o
+  $cos^{n}{\theta_{h}} = \dfrac{1}{2}$ $\Rightarrow$
+  $\cos{5\si{\degree}} = \sqrt[n]{\dfrac{1}{2}}$ $\Rightarrow$
+  $\ln{(\cos{5\si{\degree}})}$ $=$
+  $\ln{\left(\dfrac{1}{2}\right)^{\frac{1}{n}}}$ $\Rightarrow$
+  $\ln{(\cos{5\si{\degree}})}$ $=$
+  $\dfrac{1}{n}\ln{\left(\dfrac{1}{2}\right)}$ $\Rightarrow$ $n$ $=$
+  $\dfrac{\ln{\left(\dfrac{1}{2}\right)}}{\ln{(\cos{5\si{\degree}})}}$
+  $\Rightarrow$ $n$ $=$ $181.80621\si{\degree}$
+\end{enumerate}
 
 
 \section{Questão 2.11}
